--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test gulp test"
   },
-  "author": "",
+  "author": "Chris Hicks <chicks@chrhicks.com>",
   "license": "ISC",
+  "devDependencies": {
+    "chai": "3.4.1",
+    "gulp": "3.9.0",
+    "gulp-mocha": "2.2.0",
+    "require-dir": "0.3.0"
+  },
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
