--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "babel-core": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "handlebars": "^4.0.3",
