--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
     "babel-preset-es2015": "^6.5.0",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "fstream": "^1.0.8",
     "handlebars": "^4.0.3",
     "hbs": "^3.1.1",
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "mkdirp": "^0.5.1",
+    "tar": "^2.2.1",
+    "tar.gz": "^1.0.3"
   }
 }
