--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tape": "4.2.2"
   },
   "dependencies": {
+    "@flowio/lib-apidoc": "1.5.15",
     "babel-core": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "body-parser": "^1.14.1",
