--- a/package.json
+++ b/package.json
@@ -15,28 +15,28 @@
   "author": "Chris Hicks <chicks@chrhicks.com>",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "eslint": "^2.1.0",
+    "babel-cli": "6.16.0",
+    "eslint": "3.6.1",
     "expect": "^1.14.0",
-    "gulp": "3.9.0",
+    "gulp": "3.9.1",
     "mkdirp": "0.5.1",
-    "mocha": "^2.4.5",
+    "mocha": "3.1.0",
     "nodemon": "^1.8.1",
-    "npm-run-all": "^1.5.1",
+    "npm-run-all": "3.1.0",
     "require-dir": "0.3.0",
     "tap-spec": "4.1.1",
-    "tape": "4.2.2"
+    "tape": "4.6.1"
   },
   "dependencies": {
-    "@flowio/lib-apidoc": "1.5.15",
-    "babel-core": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0",
+    "@flowio/lib-apidoc": "1.5.21",
+    "babel-core": "6.16.0",
+    "babel-preset-es2015": "6.16.0",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "fstream": "^1.0.8",
     "handlebars": "^4.0.3",
-    "hbs": "^3.1.1",
-    "lodash": "^3.10.1",
+    "hbs": "4.0.1",
+    "lodash": "4.16.2",
     "mkdirp": "^0.5.1",
     "tar": "^2.2.1",
     "tar.gz": "^1.0.3"
